Created a missing description and ensured it actually shows up

--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -3,5 +3,6 @@
     <h3><%= building.street_address %></h3>
     <p><%= building.city %></p>
     <p><%= building.state %></p>
+    <p><%= building.description %></p>
   </div>
 <% end %>
