--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :street_address %>
   <%= f.input :city %>
   <%= f.input :state %>
+  <%= f.input :description %>
 
   <%= f.submit %>
 <% end %>
