faithful to TDD and procedures up until this point

--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -3,6 +3,7 @@
   <%= f.input :city %>
   <%= f.input :state %>
   <%= f.input :description %>
+  <%= f.input :owner %>
 
   <%= f.submit %>
 <% end %>
