User specifies building owner
This will let the user specify the building owner by selecting from a
drop down populated with all of the owners in the database.

https://github.com/plataformatec/simple_form#associations

--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -3,7 +3,7 @@
   <%= f.input :city %>
   <%= f.input :state %>
   <%= f.input :description %>
-  <%= f.input :owner %>
+  <%= f.association :owner, label_method: :first_name  %>
 
   <%= f.submit %>
 <% end %>
